feat(transfer): asynchonous transfers, fixed transfer timeouts (#41)
